--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack",
+    "server": "node build/server/server"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,12 @@
   "bugs": {
     "url": "https://github.com/jasonjeffrey/reactScore/issues"
   },
-  "homepage": "https://github.com/jasonjeffrey/reactScore#readme"
+  "homepage": "https://github.com/jasonjeffrey/reactScore#readme",
+  "devDependencies": {
+    "ts-loader": "^0.8.2",
+    "webpack": "^1.13.1"
+  },
+  "dependencies": {
+    "typings": "^1.3.2"
+  }
 }
