--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
   "homepage": "https://github.com/jasonjeffrey/reactScore#readme",
   "devDependencies": {
     "ts-loader": "^0.8.2",
-    "webpack": "^1.13.1"
+    "typings": "^1.3.2",
+    "webpack": "^1.13.1",
+    "webpack-node-externals": "^1.3.3"
   },
   "dependencies": {
-    "typings": "^1.3.2"
+    "express": "^4.14.0",
+    "typescript": "^1.8.10"
   }
 }
