--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "html-webpack-plugin": "^2.22.0",
     "ts-loader": "^0.8.2",
     "typings": "^1.3.2",
+    "vs-fix-sourcemaps": "^1.0.1",
     "webpack": "^1.13.1",
     "webpack-node-externals": "^1.3.3"
   },
