--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   },
   "dependencies": {
     "express": "^4.14.0",
+    "react": "^15.3.1",
+    "react-dom": "^15.3.1",
     "typescript": "^1.8.10"
   }
 }
